--- a/Novera/Source/Pages/Crm/Email/Compose/ComposeEmailPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/Compose/ComposeEmailPage.xaml
@@ -98,7 +98,7 @@
                 </Grid>
                 <Grid Grid.Row="3" Padding="16" VerticalOptions="FillAndExpand">
                     <Frame BackgroundColor="{StaticResource EditorBackgroundBlue}" BorderColor="{StaticResource LoginText}" CornerRadius="5"  Margin="0,0,0,5">
-                        <Editor TextColor="White" FontSize="20" AutoSize="Disabled"></Editor>
+                        <Editor TextColor="White" FontSize="20" AutoSize="Disabled" x:Name="bodyEditor"></Editor>
                     </Frame>
                 </Grid>
                 <Grid Grid.Row="4"  ColumnDefinitions="*,*" BackgroundColor="{StaticResource SideDrawerColor}" Padding="10" VerticalOptions="End">
