--- a/Novera/Source/Pages/Common/ForgotPassword/ForgotPasswordPage.xaml
+++ b/Novera/Source/Pages/Common/ForgotPassword/ForgotPasswordPage.xaml
@@ -34,6 +34,10 @@
 		       TextColor="{StaticResource LoginText}"
                 HorizontalOptions="Center"
 		       Margin="0,140,0,0"/>
+            <ActivityIndicator x:Name="loader"
+IsRunning="False" IsVisible="False" Color="white"
+                   VerticalOptions="Center" HorizontalOptions="Center"
+                   />
 
 
             <!-- Email -->
@@ -43,6 +47,7 @@
                     Grid.Column="0"
                     Placeholder="Email"
                     FontSize="15"
+                    x:Name="emailEntry"
                     Keyboard="Email"
                     HorizontalOptions="FillAndExpand" />
                 <!-- Image at the right end -->
@@ -69,6 +74,7 @@
                 <Entry Grid.Column="0"
                     Placeholder="Password"
                     FontSize="15"
+                       x:Name="passwordEntry"
                     HorizontalOptions="FillAndExpand" />
 
                 <!-- Image at the right end -->
@@ -92,6 +98,8 @@
                 <Entry Grid.Column="0"
                     Placeholder="Re-Type-Password"
                     FontSize="15"
+                       x:Name="confirmEntry"
+
                     HorizontalOptions="FillAndExpand" />
 
                 <!-- Image at the right end -->
