--- a/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
@@ -23,42 +23,58 @@
             </Frame>
             <ScrollView Grid.Row="1">
                 <VerticalStackLayout Margin="10,15,10,15">
-                   
-                    <CollectionView ItemsSource="{Binding InboxEmails}" BackgroundColor="Transparent" VerticalScrollBarVisibility="Always">
-                        <CollectionView.ItemsLayout>
-                                    <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="10" />
-                        </CollectionView.ItemsLayout>
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate>
-                                
+                    
+                        <CollectionView ItemsSource="{Binding InboxEmails}" BackgroundColor="Transparent" VerticalScrollBarVisibility="Always">
+                            <CollectionView.ItemsLayout>
+                                <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="10" />
+                            </CollectionView.ItemsLayout>
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+
                                     <Frame BorderColor="{StaticResource Transparent}" Margin="5, 0, 5 ,0" CornerRadius="10" Padding="5" BackgroundColor="{StaticResource EditorBackgroundBlue}">
                                         <Grid ColumnDefinitions="Auto,*, Auto" >
                                             <Frame BackgroundColor="Orange" Margin="5, 0, 0 ,0" Grid.Column= "0" WidthRequest="34" HeightRequest="34" CornerRadius="17" Padding="5" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
                                                 <Label Text="{Binding FirstLetter}" TextColor="White" HorizontalOptions="CenterAndExpand"/>
                                             </Frame>
-                                        
+
                                             <StackLayout Margin="5, 0, 0 ,0" Grid.Column= "1" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="2">
-                                                <Label Text="{Binding Name}" TextColor="#D69E5A" HorizontalOptions="Start" />
-                                                <Label Text="{Binding Information}" LineBreakMode="NoWrap" TextColor="White" HorizontalOptions="Start"/>
+                                                <Label Text="{Binding sender}" TextColor="#D69E5A" HorizontalOptions="Start" />
+                                                <Label Text="{Binding subject}" LineBreakMode="NoWrap" TextColor="White" HorizontalOptions="Start"/>
                                             </StackLayout>
 
                                             <StackLayout Margin="10, 0, 10 ,10" Grid.Column= "2" Orientation="Vertical" Spacing="2" >
-                                                <Label Text="{Binding Date}" TextColor="White" HorizontalOptions="End"/>
-                                                <ImageButton Source="email_star" WidthRequest="16" HeightRequest="16" HorizontalOptions="End"/>
+                                                <Label Text="{Binding received, StringFormat='{0:dd MMMM}'}" TextColor="White" HorizontalOptions="End"/>
+                                            <StackLayout Margin="10, 0, 10 ,10" Grid.Column= "2" Orientation="Horizontal" Spacing="2" >
+                                                <ImageButton Source="email_star" WidthRequest="16" HeightRequest="16" HorizontalOptions="End" Clicked="StarButtonClicked"
+                                                        BindingContext="{Binding .}" 
+                                                         >
+                                                    <ImageButton.Triggers>
+                                                        <DataTrigger TargetType="ImageButton" Binding="{Binding important}" Value="Y">
+                                                            <Setter Property="Source" Value="email_star" />
+                                                        </DataTrigger>
+                                                        <DataTrigger TargetType="ImageButton" Binding="{Binding important}" Value="N">
+                                                            <Setter Property="Source" Value="email_mail_white" />
+                                                        </DataTrigger>
+                                                    </ImageButton.Triggers>
+                                                </ImageButton>
+                                                <ImageButton Source="document_delete_folder" WidthRequest="16" HeightRequest="16" HorizontalOptions="End" Clicked="deleteButtonClicked"
+        BindingContext="{Binding .}" 
+         >
+                                                </ImageButton>
                                             </StackLayout>
-                                    
+                                        </StackLayout>
+
                                         </Grid>
                                     </Frame>
-                                
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
 
-                    
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                   
+
                 </VerticalStackLayout>
             </ScrollView>
         </Grid>
         <ImageButton WidthRequest="75" HeightRequest="75"  Source="notes_add_icon" HorizontalOptions="End" VerticalOptions="EndAndExpand" Margin="0,0,10,50" Clicked="AddClicked"/>
-
     </Grid>        
 </ContentView>
