--- a/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
@@ -33,7 +33,10 @@ IsRunning="False" IsVisible="False" Color="white"
                    VerticalOptions="Center" HorizontalOptions="Center"
                    />
 
-                    <CollectionView ItemsSource="{Binding InboxEmails}" BackgroundColor="Transparent" VerticalScrollBarVisibility="Always">
+                    <CollectionView ItemsSource="{Binding InboxEmails}" BackgroundColor="Transparent" VerticalScrollBarVisibility="Always"
+                                    SelectionMode="Multiple"
+                SelectionChanged="OnCollectionViewSelectionChanged"
+                                    >
                             <CollectionView.ItemsLayout>
                                 <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="10" />
                             </CollectionView.ItemsLayout>
@@ -45,8 +48,8 @@ IsRunning="False" IsVisible="False" Color="white"
                                     <Frame BorderColor="{StaticResource Transparent}" Margin="5, 0, 5 ,0" CornerRadius="10" Padding="5" BackgroundColor="{StaticResource EditorBackgroundBlue}">
                                         <Grid ColumnDefinitions="Auto,*, Auto" >
                                             <Frame BackgroundColor="Orange" Margin="5, 0, 0 ,0" Grid.Column= "0" WidthRequest="34" HeightRequest="34" CornerRadius="17" Padding="5" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                                            <Label Text="{Binding sender, StringFormat='{}{0:0}'}"  TextColor="White" HorizontalOptions="CenterAndExpand"/>
-                                            </Frame>
+                                            <Label Text="{Binding sender, Converter={StaticResource FirstCharacterConverter}}"  TextColor="White" HorizontalOptions="CenterAndExpand"/>
+                                        </Frame>
 
                                             <StackLayout Margin="5, 0, 0 ,0" Grid.Column= "1" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="2">
                                                 <Label Text="{Binding sender}" TextColor="#D69E5A" HorizontalOptions="Start" />
