--- a/Novera/Source/Pages/Crm/Email/Drafts/DraftPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/Drafts/DraftPage.xaml
@@ -22,7 +22,12 @@
             </Frame>
             <ScrollView Grid.Row="1">
                 <VerticalStackLayout Margin="10,15,10,15">
-                   
+
+                    <ActivityIndicator x:Name="loader"
+IsRunning="False" IsVisible="False" Color="white"
+                   VerticalOptions="Center" HorizontalOptions="Center"
+                   />
+
                     <CollectionView ItemsSource="{Binding DraftList}" BackgroundColor="Transparent" VerticalScrollBarVisibility="Always">
                         <CollectionView.ItemsLayout>
                                     <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="10" />
@@ -35,18 +40,37 @@
                                             <Frame BackgroundColor="{StaticResource GreyColor}" Margin="5, 0, 0 ,0" Grid.Column= "0" WidthRequest="34" HeightRequest="34" CornerRadius="17" Padding="5" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
                                                 <Image Source="email_draft_user" HorizontalOptions="CenterAndExpand"/>
                                             </Frame>
-                                        
-                                            <StackLayout Margin="5, 0, 0 ,0" Grid.Column= "1" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="2">
-                                                <Label Text="{Binding Name}" Style ="{StaticResource Font16Label}" TextColor="{StaticResource RedColor}" HorizontalOptions="Start" />
-                                                <Label Text="{Binding Subject}"  Style = "{StaticResource Font14Label}"  LineBreakMode="NoWrap" TextColor="White" HorizontalOptions="Start"/>
-                                            </StackLayout>
 
-                                            <StackLayout Margin="10, 0, 10 ,10" Grid.Column= "2" Orientation="Vertical" Spacing="2" >
-                                                <Label Text="{Binding Date}" TextColor="White" HorizontalOptions="End"/>
-                                                <ImageButton Source="email_star" WidthRequest="16" HeightRequest="16" HorizontalOptions="End"/>
+
+                                        <StackLayout Margin="5, 0, 0 ,0" Grid.Column= "1" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="2">
+                                            <Label Text="{Binding sender}" TextColor="#D69E5A" HorizontalOptions="Start" />
+                                            <Label Text="{Binding subject}" LineBreakMode="NoWrap" TextColor="White" HorizontalOptions="Start"/>
+                                        </StackLayout>
+
+                                        <StackLayout Margin="10, 0, 10 ,10" Grid.Column= "2" Orientation="Vertical" Spacing="2" >
+                                            <Label Text="{Binding received, StringFormat='{0:dd MMMM}'}" TextColor="White" HorizontalOptions="End"/>
+                                            <StackLayout Margin="10, 0, 10 ,10" Grid.Column= "2" Orientation="Horizontal" Spacing="2" >
+                                                <ImageButton Source="email_star" WidthRequest="16" HeightRequest="16" HorizontalOptions="End" Clicked="StarButtonClicked"
+                                                        BindingContext="{Binding .}" 
+                                                         >
+                                                    <ImageButton.Triggers>
+                                                        <DataTrigger TargetType="ImageButton" Binding="{Binding important}" Value="Y">
+                                                            <Setter Property="Source" Value="favourite" />
+                                                        </DataTrigger>
+                                                        <DataTrigger TargetType="ImageButton" Binding="{Binding important}" Value="N">
+                                                            <Setter Property="Source" Value="email_star" />
+                                                        </DataTrigger>
+                                                    </ImageButton.Triggers>
+                                                </ImageButton>
+                                                <ImageButton Source="document_delete_folder" WidthRequest="16" HeightRequest="16" HorizontalOptions="End" Clicked="deleteButtonClicked"
+        BindingContext="{Binding .}" 
+         >
+                                                </ImageButton>
                                             </StackLayout>
-                                    
-                                        </Grid>
+                                        </StackLayout>
+
+
+                                    </Grid>
                                     </Frame>
                                 
                             </DataTemplate>
