--- a/Novera/Source/Pages/Crm/Email/Trash/TrashMailView.xaml
+++ b/Novera/Source/Pages/Crm/Email/Trash/TrashMailView.xaml
@@ -23,33 +23,55 @@
             </Frame>
             <ScrollView Grid.Row="1">
                 <VerticalStackLayout Margin="10,15,10,15">
-                   
+                    <ActivityIndicator x:Name="loader"
+IsRunning="False" IsVisible="False" Color="white"
+                   VerticalOptions="Center" HorizontalOptions="Center"
+                   />
                     <CollectionView ItemsSource="{Binding TrashMailList}" BackgroundColor="Transparent" VerticalScrollBarVisibility="Always">
                         <CollectionView.ItemsLayout>
                                     <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="10" />
                         </CollectionView.ItemsLayout>
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
-                                
-                                    <Frame BorderColor="{StaticResource Transparent}" Margin="5, 0, 5 ,0" CornerRadius="10" Padding="5" BackgroundColor="{StaticResource EditorBackgroundBlue}">
-                                        <Grid ColumnDefinitions="Auto,*, Auto" >
-                                            <Frame BackgroundColor="Orange" Margin="5, 0, 0 ,0" Grid.Column= "0" WidthRequest="34" HeightRequest="34" CornerRadius="17" Padding="5" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                                                <Label Text="{Binding FirstLetter}" TextColor="White" HorizontalOptions="CenterAndExpand"/>
-                                            </Frame>
-                                        
-                                            <StackLayout Margin="5, 0, 0 ,0" Grid.Column= "1" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="2">
-                                                <Label Text="{Binding To}" TextColor="#D69E5A" HorizontalOptions="Start" />
-                                                <Label Text="{Binding Subject}" LineBreakMode="NoWrap" TextColor="White" HorizontalOptions="Start"/>
-                                            </StackLayout>
 
-                                            <StackLayout Margin="10, 0, 10 ,10" Grid.Column= "2" Orientation="Vertical" Spacing="2" >
-                                                <Label Text="{Binding Date}" TextColor="White" HorizontalOptions="End"/>
-                                                <ImageButton Source="email_star" WidthRequest="16" HeightRequest="16" HorizontalOptions="End"/>
+
+
+                                <Frame BorderColor="{StaticResource Transparent}" Margin="5, 0, 5 ,0" CornerRadius="10" Padding="5" BackgroundColor="{StaticResource EditorBackgroundBlue}">
+                                    <Grid ColumnDefinitions="Auto,*, Auto" >
+                                        <Frame BackgroundColor="Orange" Margin="5, 0, 0 ,0" Grid.Column= "0" WidthRequest="34" HeightRequest="34" CornerRadius="17" Padding="5" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                                            <Label Text="{Binding sender, Converter={StaticResource FirstCharacterConverter}}"  TextColor="White" HorizontalOptions="CenterAndExpand"/>
+                                        </Frame>
+
+                                        <StackLayout Margin="5, 0, 0 ,0" Grid.Column= "1" HorizontalOptions="FillAndExpand" Orientation="Vertical" Spacing="2">
+                                            <Label Text="{Binding sender}" TextColor="#D69E5A" HorizontalOptions="Start" />
+                                            <Label Text="{Binding subject}" LineBreakMode="NoWrap" TextColor="White" HorizontalOptions="Start"/>
+                                        </StackLayout>
+
+                                        <StackLayout Margin="10, 0, 10 ,10" Grid.Column= "2" Orientation="Vertical" Spacing="2" >
+                                            <Label Text="{Binding received, StringFormat='{0:dd MMMM}'}" TextColor="White" HorizontalOptions="End"/>
+                                            <StackLayout Margin="10, 0, 10 ,10" Grid.Column= "2" Orientation="Horizontal" Spacing="2" >
+                                                <ImageButton Source="email_star" WidthRequest="16" HeightRequest="16" HorizontalOptions="End" Clicked="StarButtonClicked"
+                                                        BindingContext="{Binding .}" 
+                                                         >
+                                                    <ImageButton.Triggers>
+                                                        <DataTrigger TargetType="ImageButton" Binding="{Binding important}" Value="Y">
+                                                            <Setter Property="Source" Value="favourite" />
+                                                        </DataTrigger>
+                                                        <DataTrigger TargetType="ImageButton" Binding="{Binding important}" Value="N">
+                                                            <Setter Property="Source" Value="email_star" />
+                                                        </DataTrigger>
+                                                    </ImageButton.Triggers>
+                                                </ImageButton>
+                                                <ImageButton Source="document_delete_folder" WidthRequest="16" HeightRequest="16" HorizontalOptions="End" Clicked="deleteButtonClicked"
+        BindingContext="{Binding .}" 
+         >
+                                                </ImageButton>
                                             </StackLayout>
-                                    
-                                        </Grid>
-                                    </Frame>
-                                
+                                        </StackLayout>
+
+                                    </Grid>
+                                </Frame>
+
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
                     </CollectionView>
