--- a/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
+++ b/Novera/Source/Pages/Crm/Email/Inbox/InboxPage.xaml
@@ -46,7 +46,10 @@ IsRunning="False" IsVisible="False" Color="white"
 
                                     
                                     <Frame BorderColor="{StaticResource Transparent}" Margin="5, 0, 5 ,0" CornerRadius="10" Padding="5" BackgroundColor="{StaticResource EditorBackgroundBlue}">
-                                        <Grid ColumnDefinitions="Auto,*, Auto" >
+                                    <Frame.GestureRecognizers>
+                                        <TapGestureRecognizer Tapped="EmailItemTapped" />
+                                    </Frame.GestureRecognizers>
+                                    <Grid ColumnDefinitions="Auto,*, Auto" >
                                             <Frame BackgroundColor="Orange" Margin="5, 0, 0 ,0" Grid.Column= "0" WidthRequest="34" HeightRequest="34" CornerRadius="17" Padding="5" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
                                             <Label Text="{Binding sender, Converter={StaticResource FirstCharacterConverter}}"  TextColor="White" HorizontalOptions="CenterAndExpand"/>
                                         </Frame>
