--- a/Novera/Source/Pages/Crm/Calendar/CreateEvent/CreateEventPage.xaml
+++ b/Novera/Source/Pages/Crm/Calendar/CreateEvent/CreateEventPage.xaml
@@ -2,6 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             x:Class="Novera.Source.Pages.Crm.Calendar.CreateEvent.CreateEventPage"
+              xmlns:extension="clr-namespace:Novera.Source.Utility"
+              xmlns:strings="clr-namespace:Novera.Resources.Strings"
             Title="CreateEventPage"
             BackgroundImageSource="top_cloud_straight"
             xmlns:customControls="clr-namespace:Novera.Source.CustomView"
@@ -28,7 +30,7 @@
                     
                 <Grid ColumnDefinitions="Auto,*,Auto" RowDefinitions="*,*" ColumnSpacing="5"  Margin="10" RowSpacing="10">
                     <Image Source="task_time" Aspect="AspectFill" WidthRequest="25" HeightRequest="25"></Image>
-                    <Label Text="All-day" Style="{StaticResource Font16Label}" TextColor="White" Grid.Column="1" Margin="10,0,0,0" VerticalOptions="Center" ></Label>
+                    <Label Text="{x:Static strings:language.e3101001}" Style="{StaticResource Font16Label}" TextColor="White" Grid.Column="1" Margin="10,0,0,0" VerticalOptions="Center" ></Label>
                     <customControls:CustomRadioButton Grid.Column="2" />
                     <Label Text="Sun,10 Dec,2023" Style="{StaticResource Font16Label}" TextColor="White" Grid.Column="1"  Margin="10,0,0,0" Grid.Row="1" ></Label>
                     <Label Text="5:00 pm" Style="{StaticResource Font16Label}" TextColor="White" Grid.Column="2"  Grid.Row="1"></Label>
@@ -49,11 +51,17 @@
                     Margin="10,0,0,20"
                     HorizontalOptions="FillAndExpand" />
 
-                <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto" Margin="10,15" ColumnSpacing="5" RowSpacing="10">
-                    <Image Source="event_add_people" Aspect="AspectFill" WidthRequest="25" HeightRequest="25"></Image>
+                <Grid ColumnDefinitions="Auto,Auto,Auto" RowDefinitions="Auto,Auto" Margin="10,15" ColumnSpacing="5">
+                    <Image Source="event_add_people" Aspect="AspectFill" WidthRequest="25" HeightRequest="25" Grid.Row="0" Grid.Column="0"></Image>
                     <Label Text="Add people" TextColor="White" Style="{StaticResource Font16Label}" Grid.Column="1" Margin="10,0,0,0" VerticalOptions="Center"></Label>
-                    <Button Text="View schedules" Grid.Column="1" Grid.Row="1" Margin="10,0,0,0" Style="{StaticResource BlueButtonwithWhiteBorder}" ></Button>
+                    <Button Text="View schedules" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="10,10,0,0" Style="{StaticResource BlueButtonwithWhiteBorder}" ></Button>
                 </Grid>
+
+
+
+
+
+
 
                 <BoxView Color="{StaticResource EntryText}"
                     HeightRequest="1"
@@ -85,9 +93,9 @@
                     <Label Text="Add attachment" TextColor="White" Style="{StaticResource Font16Label}" Grid.Column="1" Margin="10,0,0,0" VerticalOptions="Center"></Label>
                 </Grid>
             </VerticalStackLayout>
-        </ScrollView>             
-            
-        <Button Text="Save"
+        </ScrollView>
+
+        <Button Text="{x:Static strings:language.e2305046}"
                 Style="{StaticResource MainButtonTransparentStyle}"
                 Clicked = "SaveBtnClicked"
                 Margin="10, 0, 10, 10"
