--- a/Novera/Source/Pages/Common/ForgotPassword/ForgotPasswordPage.xaml
+++ b/Novera/Source/Pages/Common/ForgotPassword/ForgotPasswordPage.xaml
@@ -74,7 +74,7 @@ IsRunning="False" IsVisible="False" Color="white"
                 Margin="20,10,20,0">
                 <!-- Entry box -->
                 <Entry Grid.Column="0"
-                    Placeholder="{x:Static strings:language.e3105007}"
+                    Placeholder="{x:Static strings:language.e1302046}"
                     FontSize="15"
                        x:Name="passwordEntry"
                     HorizontalOptions="FillAndExpand" />
@@ -125,11 +125,15 @@ IsRunning="False" IsVisible="False" Color="white"
                     Grid.Column="1"/>
 
             <Label TextColor="{StaticResource LoginText}"
-		       FontSize="18"
-               VerticalTextAlignment="End"
-		       Text="{x:Static strings:language.e5502006}"
-               VerticalOptions="End"
-		       HorizontalOptions="CenterAndExpand"/>
+       FontSize="18"
+       Text="Contact"
+       HorizontalOptions="CenterAndExpand">
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnContactTapped" />
+                </Label.GestureRecognizers>
+            </Label>
+
+
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
