--- a/Novera/Source/Pages/Crm/SupportTicket/History/TicketHistoryListPage.xaml
+++ b/Novera/Source/Pages/Crm/SupportTicket/History/TicketHistoryListPage.xaml
@@ -2,6 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             x:Class="Novera.Source.Pages.Crm.SupportTicket.History.TicketHistoryListPage"
+             xmlns:extension="clr-namespace:Novera.Source.Utility"
+             xmlns:strings="clr-namespace:Novera.Resources.Strings"
             Title="Ticket History"
             xmlns:local="clr-namespace:Novera.Source.ViewModel.SupportTicket"
             BackgroundColor="Transparent"
@@ -19,7 +21,7 @@
             Margin ="20,10,20,10"
             BorderColor="{StaticResource LoginText}" CornerRadius="5"  >
             <Grid ColumnDefinitions="*, Auto">
-                <Entry  Placeholder="Search" 
+                <Entry  Placeholder="{x:Static strings:language.e3101012}" 
                     PlaceholderColor="{StaticResource LoginText}"
                     TextColor="{StaticResource EntryTextColorWhite}" Style="{StaticResource Font20Label}" />
                  <Image Grid.Column ="1" Source="notes_search"/>
@@ -27,9 +29,9 @@
         </Frame>
         <StackLayout Grid.Row="1" 
              Margin ="20,10,20,0">
-            <RadioButton Content="View Outstanding Items" />
-            <RadioButton Content="View Completed Items" />
-            <RadioButton Content="View All Items" />               
+            <RadioButton Content="{x:Static strings:language.e5805020}" />
+            <RadioButton Content="{x:Static strings:language.e5805019}" />
+            <RadioButton Content="{x:Static strings:language.e5805018}" />               
         </StackLayout>
         <CollectionView Grid.Row="2"
         ItemsSource="{Binding TicketHistoryList}" 
@@ -46,21 +48,21 @@
                             CornerRadius="5" Padding="10,20,10,20" >
                             <Grid  ColumnDefinitions="0.33*,0.33*,0.33*">
                                 <VerticalStackLayout>
-                                    <Label Text="Date" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>     
+                                <Label Text="{x:Static strings:language.e2308003}" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>     
                                     <Label Text="{Binding Date}" Margin="0,5,0,0" Style="{StaticResource Font14Label}" HorizontalOptions ="Start" TextColor="{StaticResource LoginText}" MaxLines="1"/>    
-                                    <Label Text="{Binding TicketNo}" Margin="0,5,0,0" Style="{StaticResource Font10Label}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}" MaxLines="1"/> 
-                                    <Label Text="Doc" Margin="0,10,0,0" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>   
+                                    <Label Text="{Binding TicketNo}" Margin="0,5,0,0" Style="{StaticResource Font10Label}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}" MaxLines="1"/>
+                                <Label Text="{x:Static strings:language.e2402004}" Margin="0,10,0,0" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>   
                                     <Image Source="ticket_pdf_doc" Margin="0,5,0,0" HorizontalOptions ="Start"/>   
                                 </VerticalStackLayout>
                                  <VerticalStackLayout Grid.Column="1">
-                                    <Label Text="Time" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>     
+                                <Label Text="{x:Static strings:language.e3106015}" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>     
                                     <Label Text="{Binding Time}" Margin="0,5,0,0" Style="{StaticResource Font14Label}" HorizontalOptions ="Start" TextColor="{StaticResource LoginText}"  MaxLines="1"/>    
-                                    <Label Text="" Margin="0,5,0,0" Style="{StaticResource Font10Label}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/> 
-                                    <Label Text="Queue" Margin="0,10,0,0" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>   
+                                    <Label Text="" Margin="0,5,0,0" Style="{StaticResource Font10Label}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>
+                                <Label Text="{x:Static strings:language.e2302012}" Margin="0,10,0,0" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>   
                                     <Image Source="ticket_correct" Margin="0,5,0,0" HorizontalOptions ="Start"/>   
                                 </VerticalStackLayout>
                                  <VerticalStackLayout Grid.Column="2">
-                                    <Label Text="Subject" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>     
+                                <Label Text="{x:Static strings:language.e3105017}" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>     
                                     <Label Text="{Binding Subject}" Margin="0,5,0,0" Style="{StaticResource Font14Label}" HorizontalOptions ="Start" TextColor="{StaticResource LoginText}"  MaxLines="1"/>    
                                     <Label Text="{Binding Name}" Margin="0,5,0,0" Style="{StaticResource Font10Label}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}" MaxLines="1"/> 
                                     <Label Text="Fixed" Margin="0,10,0,0" Style="{StaticResource Font14LabelAppleGothic}" HorizontalOptions ="Start" TextColor="{StaticResource EntryTextColorWhite}"/>   
