--- a/Novera/Source/Pages/Crm/Document/DocumentPage.xaml
+++ b/Novera/Source/Pages/Crm/Document/DocumentPage.xaml
@@ -2,6 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Novera.Source.Pages.Crm.Document.DocumentPage"
+             xmlns:extension="clr-namespace:Novera.Source.Utility"
+             xmlns:strings="clr-namespace:Novera.Resources.Strings"
              Title="Document"
              BackgroundColor="Transparent"
              xmlns:local="clr-namespace:Novera.Source.ViewModel.Document"
@@ -16,7 +18,7 @@
                 CornerRadius="10" Padding="5" >
                 
                 <Grid ColumnDefinitions="0.8*,0.2*">
-                    <Entry Placeholder="Search" PlaceholderColor="{StaticResource LoginText}" TextColor="White"  FontSize="15"></Entry>
+                    <Entry Placeholder="{x:Static strings:language.e3101012}" PlaceholderColor="{StaticResource LoginText}" TextColor="White"  FontSize="15"></Entry>
                     <Image Source="icon_search" HeightRequest="25" WidthRequest="25" Aspect="AspectFill"  Grid.Column="1" HorizontalOptions="End"></Image>
                 </Grid>
             </Frame>
